@@ -42,9 +42,9 @@
 			</tbody>
 		</table>
 	</div>
-	<p><label><input type='checkbox' class='vboxCheckbox' name='vboxImportReinitNetwork' />
+	<div style='margin:2px;margin-top:4px;padding:0px;'><label><input type='checkbox' class='vboxCheckbox' name='vboxImportReinitNetwork' />
 		<span class='translateglob'>Reinitialize the MAC address of all network cards</span></label>
-	</p>
+	</div>
 	
 </div>
 <script type='text/javascript'>
